--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "0.19.2",
+    "bootstrap": "4.5.0",
+    "exenv": "1.2.2",
+    "postcode": "2.0.0",
     "react": "^16.13.1",
+    "react-bootstrap": "1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "5.2.0",
+    "react-scripts": "3.4.1",
+    "scriptjs": "2.5.9"
   },
   "scripts": {
     "start": "react-scripts start",
