--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "axios": "0.19.2",
     "bootstrap": "4.5.0",
     "exenv": "1.2.2",
+    "express": "4.17.1",
+    "express-favicon": "2.0.1",
+    "path": "0.12.7",
     "postcode": "2.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "1.0.1",
@@ -18,7 +21,7 @@
     "scriptjs": "2.5.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
