--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "0.19.2",
     "bootstrap": "4.5.0",
+    "d3": "6.3.1",
     "exenv": "1.2.2",
     "express": "4.17.1",
     "express-favicon": "2.0.1",
@@ -16,12 +17,14 @@
     "react": "^16.13.1",
     "react-bootstrap": "1.0.1",
     "react-dom": "^16.13.1",
+    "react-google-charts": "3.0.15",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "scriptjs": "2.5.9"
   },
   "scripts": {
     "start": "node server.js",
+    "dev-start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
