--- a/package.json
+++ b/package.json
@@ -1,32 +1,67 @@
 {
   "name": "by-their-tweets",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "1.3.5",
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@material-ui/core": "3.9.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "0.19.2",
     "bootstrap": "4.5.0",
+    "bootstrap-css-only": "4.4.1",
+    "chart.js": "2.9.3",
+    "classnames": "2.2.6",
+    "connected-react-router": "6.8.0",
     "d3": "6.3.1",
     "exenv": "1.2.2",
     "express": "4.17.1",
     "express-favicon": "2.0.1",
+    "focus-trap-react": "^6.0.0",
+    "history": "4.10.1",
+    "material-ui-pickers": "2.2.4",
+    "mdbreact": "4.25.5",
+    "moment": "2.24.0",
+    "node-sass-chokidar": "1.4.0",
+    "npm-run-all": "4.1.5",
     "path": "0.12.7",
+    "perfect-scrollbar": "1.5.0",
+    "popper.js": "^1.16.0",
     "postcode": "2.0.0",
+    "prop-types": "15.7.2",
+    "raf": "3.4.1",
     "react": "^16.13.1",
+    "react-chartjs-2": "2.9.0",
     "react-bootstrap": "1.0.1",
     "react-dom": "^16.13.1",
     "react-google-charts": "3.0.15",
+    "react-image-lightbox": "5.1.1",
+    "react-numeric-input": "2.2.3",
+    "react-popper": "^1.3.7",
+    "react-redux": "7.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
+    "react-scroll": "1.7.16",
+    "react-toastify": "5.5.0",
+    "react-transition-group": "4.3.0",
+    "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.8",
+    "redux-form": "8.3.2",
+    "redux-form-website-template": "1.0.13",
+    "redux-thunk": "2.3.0",
     "scriptjs": "2.5.9"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
     "start": "node server.js",
-    "dev-start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start-dev": "PORT=3006 npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
